added complementary HTTP methods
