# server.js
@@ -10,7 +10,7 @@ const   express             = require("express"),
         { MongoClient }     = require("mongodb"),
         dataParams          = {useNewUrlParser: true, useUnifiedTopology: true},
         dataSource          = process.env.DB_URI    || "mongodb://localhost:27017",
-        apiKey              = process.env.API_KEY   || "123",
+        apiKey              = process.env.API_KEY,
         PORT                = process.env.PORT      || 8000;
 
 let     database,
@@ -39,7 +39,27 @@ async function connectToServer() {
 
 
         // Return all documents in the collection
+        app.get("/api/find/all", async (req, res) => {
 
+            database        = req.query.database;
+            collection      = req.query.collection;
+            db              = mongo.db(database);
+            req.log.comment = comment;
+            trace           = db.collection("logs");
+
+            if (req.headers.api_key & (req.headers.api_key == apiKey)) {
+                req.authorized = true;
+                let findResult = await db.collection(collection).find({}).toArray();
+                res.status(200).json(findResult);
+                comment = `Display all documents of collection ${collection} in database ${database}`;
+            } else {
+                req.authorized = false;
+                comment = `Unauthorized: missing API key`;
+                res.status(401).send(comment);
+            }
+
+            trace.insertOne(req.log);
+        });
         app.post("/api/find/all", async (req, res) => {
 
             database        = req.body.database     || "persistance";
@@ -49,10 +69,12 @@ async function connectToServer() {
             trace           = db.collection("logs");
 
             if (req.headers.api_key & (req.headers.api_key == apiKey)) {
+                req.authorized = true;
                 let findResult = await db.collection(collection).find({}).toArray();
                 res.status(200).json(findResult);
                 comment = `Display all documents of collection ${collection} in database ${database}`;
             } else {
+                req.authorized = false;
                 comment = `Unauthorized: missing API key`;
                 res.status(401).send(comment);
             }
@@ -61,6 +83,31 @@ async function connectToServer() {
         });
 
         // Return a single document (first match)
+
+        app.get("/api/find", async (req, res) => {
+
+            database        = req.query.database     || "persistance";
+            collection      = req.query.collection   || "logs";
+            db              = mongo.db(database);
+            req.log.comment = comment;
+            queryFilter     = req.body.filter;
+            trace           = db.collection("logs");
+
+            if (req.headers.api_key & (req.headers.api_key == apiKey)) {
+                req.authorized = true;
+                let findOneResult = await db.collection(collection).findOne(queryFilter)
+                res.json(findOneResult);
+                comment = `Display document matching filter ${queryFilter} in collection ${collection} of database ${database}`;
+            } else {
+                req.authorized = false;
+                comment = `Unauthorized: missing API key`;
+                res.status(401).send(comment);
+            }
+
+            trace.insertOne(req.log);
+
+        });
+
         app.post("/api/find", async (req, res) => {
 
             database        = req.body.database     || "persistance";
@@ -71,10 +118,12 @@ async function connectToServer() {
             trace           = db.collection("logs");
 
             if (req.headers.api_key & (req.headers.api_key == apiKey)) {
+                req.authorized = true;
                 let findOneResult = await db.collection(collection).findOne(queryFilter)
                 res.json(findOneResult);
                 comment = `Display document matching filter ${queryFilter} in collection ${collection} of database ${database}`;
             } else {
+                req.authorized = false;
                 comment = `Unauthorized: missing API key`;
                 res.status(401).send(comment);
             }
@@ -84,6 +133,31 @@ async function connectToServer() {
         });
 
         // Return a document by id
+
+        app.get("/api/find/:id", async (req, res) => {
+
+            database        = req.query.database     || "persistance";
+            collection      = req.query.collection   || "persistance";
+            document        = { id: req.query.id };
+            db              = mongo.db(database);
+            req.log.comment = comment;
+            //filter        = req.body.filter.id;
+            trace           = db.collection("logs");
+
+            if (req.headers.api_key & (req.headers.api_key == apiKey)) {
+                req.authorized = true;
+                let findIdResult = await db.collection(collection).find({}).toArray();
+                res.json(findIdResult);
+            } else {
+                req.authorized = false;
+                comment = `Unauthorized: missing API key`;
+                res.status(401).send(comment);
+            }
+
+            trace.insertOne(req.log);
+
+        });
+
         app.post("/api/find/:id", async (req, res) => {
 
             database        = req.body.database     || "persistance";
@@ -95,9 +169,11 @@ async function connectToServer() {
             trace           = db.collection("logs");
 
             if (req.headers.api_key & (req.headers.api_key == apiKey)) {
+                req.authorized = true;
                 let findIdResult = await db.collection(collection).find({}).toArray();
                 res.json(findIdResult);
             } else {
+                req.authorized = false;
                 comment = `Unauthorized: missing API key`;
                 res.status(401).send(comment);
             }
@@ -117,6 +193,7 @@ async function connectToServer() {
             trace           = db.collection("logs");
 
             if (req.headers.api_key & (req.headers.api_key == apiKey)) {
+                req.authorized = true;
                 let insertResult = await db.collection(collection).insertOne(document)
                 if(insertResult.acknowledged) {
                     comment = `Added a new document with id ${insertResult.insertedId} in database ${database}, collection ${collection}`;
@@ -125,6 +202,7 @@ async function connectToServer() {
                 }
                 res.status(200).send(insertResult);
             } else {
+                req.authorized = false;
                 req.log.comment = `Unauthorized: missing API key`;
                 res.status(401).send(comment);
             }
@@ -146,9 +224,11 @@ async function connectToServer() {
             trace           = db.collection("logs");
 
             if (req.headers.api_key & (req.headers.api_key == apiKey)) {
+                req.authorized = true;
                 let updateResult = await db.collection(collection).updateOne(document, updates);
                 res.status(200).json(updateResult);
             } else {
+                req.authorized = false;
                 comment = `Unauthorized: missing API key`;
                 res.status(401).send(comment);
             }
@@ -170,9 +250,11 @@ async function connectToServer() {
             trace           = db.collection("logs");
 
             if (req.headers.api_key & (req.headers.api_key == apiKey)) {
+                req.authorized = true;
                 let updateResult = await db.collection(collection).updateMany(filter, updates);
                 res.status(200).json(updateResult);
             } else {
+                req.authorized = false;
                 comment = `Unauthorized: missing API key`;
                 res.status(401).send(comment);
             }
@@ -182,6 +264,35 @@ async function connectToServer() {
         });
 
         // Delete * documents matching the query
+
+        app.delete("/api/delete", async (req, res) => {
+
+            database        = req.query.database   || "persistance";
+            collection      = req.query.collection || "logs";
+            filter          = req.query.filter;
+            req.log.comment = comment;
+            db              = mongo.db(database);
+            trace           = db.collection("logs");
+
+            if (req.headers.api_key & (req.headers.api_key == apiKey)) {
+                req.authorized = true;
+                let deleteResult = await db.collection(collection).deleteMany(filter);
+                res.status(200).send(deleteResult);
+                if(deleteResult.deletedCount >= 1){
+                    comment = `${deleteResult.deletedCount} document(s) deleted in database ${database}, collection ${collection}`;
+                } else {
+                    comment = `No document matching filter ${filter}. Nothing was deleted in database ${database}, collection ${collection}`;
+                }
+            } else {
+                req.authorized = false;
+                comment = `Unauthorized: missing API key`;
+                res.status(401).send(comment);
+            }
+
+            trace.insertOne(req.log);
+
+        });
+
         app.post("/api/delete", async (req, res) => {
 
             database        = req.body.database   || "persistance";
@@ -192,6 +303,7 @@ async function connectToServer() {
             trace           = db.collection("logs");
 
             if (req.headers.api_key & (req.headers.api_key == apiKey)) {
+                req.authorized = true;
                 let deleteResult = await db.collection(collection).deleteMany(filter);
                 res.status(200).send(deleteResult);
                 if(deleteResult.deletedCount >= 1){
@@ -200,6 +312,7 @@ async function connectToServer() {
                     comment = `No document matching filter ${filter}. Nothing was deleted in database ${database}, collection ${collection}`;
                 }
             } else {
+                req.authorized = false;
                 comment = `Unauthorized: missing API key`;
                 res.status(401).send(comment);
             }
@@ -209,6 +322,35 @@ async function connectToServer() {
         });
 
         // Delete document by id
+
+        app.delete("/api/delete/:id", async (req, res) => {
+
+            database        = req.query.database   || "persistance";
+            collection      = req.query.collection || "logs";
+            document        = { "id": req.query.id };
+            req.log.comment = comment;
+            db              = mongo.db(database);
+            trace           = db.collection("logs");
+
+            if (req.headers.api_key & (req.headers.api_key == apiKey)) {
+                req.authorized = true;
+                let deleteResult = await db.collection(collection).deleteOne(document);
+                res.status(200).send(deleteResult);
+                if(deleteResult.deletedCount >= 1){
+                    comment = `Document with id ${req.params.id} was deleted in database ${database}, collection  ${collection}`;
+                } else {
+                    comment = `No document with id ${req.params.id}. No deletion in database ${database}, collection : ${collection}`;
+                }
+            } else {
+                req.authorized = false;
+                comment = `Unauthorized: missing API key`;
+                res.status(401).send(comment);
+            }
+
+            trace.insertOne(req.log);
+
+        });
+
 
         app.post("/api/delete/:id", async (req, res) => {
 
@@ -220,6 +362,7 @@ async function connectToServer() {
             trace           = db.collection("logs");
 
             if (req.headers.api_key & (req.headers.api_key == apiKey)) {
+                req.authorized = true;
                 let deleteResult = await db.collection(collection).deleteOne(document);
                 res.status(200).send(deleteResult);
                 if(deleteResult.deletedCount >= 1){
@@ -228,6 +371,7 @@ async function connectToServer() {
                     comment = `No document with id ${req.params.id}. No deletion in database ${database}, collection : ${collection}`;
                 }
             } else {
+                req.authorized = false;
                 comment = `Unauthorized: missing API key`;
                 res.status(401).send(comment);
             }
